manifests/prometheus-operator-admission-webhook-0.13.0.tgz-manifest.yaml
---
# Source: prometheus-operator-admission-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: prometheus-operator-admission-webhook-0.13.0
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.74.0"
    app.kubernetes.io/managed-by: Helm
  name: my-release-prometheus-operator-admission-webhook
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/instance: my-release
---
# Source: prometheus-operator-admission-webhook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: prometheus-operator-admission-webhook-0.13.0
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.74.0"
    app.kubernetes.io/managed-by: Helm
  name: my-release-prometheus-operator-admission-webhook
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-operator-admission-webhook
      app.kubernetes.io/instance: my-release
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: prometheus-operator-admission-webhook-0.13.0
        app.kubernetes.io/name: prometheus-operator-admission-webhook
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.74.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      serviceAccountName: my-release-prometheus-operator-admission-webhook
      securityContext:
        fsGroup: 2000
      containers:
        - name: prometheus-operator-admission-webhook
          args:
            - --web.enable-tls=true
            - --web.cert-file=/etc/tls/private/tls.crt
            - --web.key-file=/etc/tls/private/tls.key
            - --web.listen-address=:10250
            - --web.tls-min-version=VersionTLS13
          image: "quay.io/prometheus-operator/admission-webhook:v0.74.0"
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: https
          ports:
            - containerPort: 10250
              name: https
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            periodSeconds: 10
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - name: tls-certificates
              mountPath: /etc/tls/private
              readOnly: true
      volumes:
        - name: tls-certificates
          secret:
            secretName: my-release-prometheus-operator-admission-webhook
            defaultMode: 420
---
# Source: prometheus-operator-admission-webhook/templates/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name:  my-release-prometheus-operator-admission-webhook
  labels:
    helm.sh/chart: prometheus-operator-admission-webhook-0.13.0
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.74.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: prometheusrulemutate.monitoring.coreos.com
    failurePolicy: Fail
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        resources:
          - prometheusrules
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: default
        name: my-release-prometheus-operator-admission-webhook
        path: /admission-prometheusrules/mutate
    timeoutSeconds: 10
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
---
# Source: prometheus-operator-admission-webhook/templates/validatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name:  my-release-prometheus-operator-admission-webhook
  labels:
    helm.sh/chart: prometheus-operator-admission-webhook-0.13.0
    app.kubernetes.io/name: prometheus-operator-admission-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.74.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: prometheusrulevalidate.monitoring.coreos.com
    failurePolicy: Fail
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        resources:
          - prometheusrules
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: default
        name: my-release-prometheus-operator-admission-webhook
        path: /admission-prometheusrules/validate
    timeoutSeconds: 10
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
  - name: alertmanagerconfigsvalidate.monitoring.coreos.com
    failurePolicy: Fail
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - v1alpha1
        resources:
          - alertmanagerconfigs
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: default
        name: my-release-prometheus-operator-admission-webhook
        path: /admission-alertmanagerconfigs/validate
    timeoutSeconds: 10
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
